added materialize css frame work template

--- a/templates/summaryDashboard/summaryDashboard.html
+++ b/templates/summaryDashboard/summaryDashboard.html
@@ -1,58 +1,70 @@
-{% load static %}
+{% extends 'base.html' %}
 
-<!DOCTYPE html>
-<html class="no-js" lang="en">
-<title>Equal Borders</title>
+{% block content %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
-    <link href="{% static 'css/base.css' %}" rel="stylesheet">
-    <link rel="stylesheet"
-        href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/css/foundation.min.css"
-        integrity="sha256-ogmFxjqiTMnZhxCqVmcqTvjfe1Y/ec4WaRj/aQPvn+I=" crossorigin="anonymous">
-</head>
-
-
-<body>
-
-    <!-- nav bar -->
-    <nav class="top-bar topbar-responsive">
-        <div class="top-bar-title">
-            <span data-responsive-toggle="topbar-responsive" data-hide-for="medium">
-                <button class="menu-icon" type="button" data-toggle></button>
-            </span>
-            <a class="topbar-responsive-logo" href="#"><strong>Equal Borders</strong></a>
+<div class="section no-pad-bot" id="index-banner">
+    <div class="container">
+        <br><br>
+        <h1 class="header center orange-text">Starter Template</h1>
+        <div class="row center">
+            <h5 class="header col s12 light">A modern responsive front-end framework based on
+                Material Design</h5>
         </div>
+        <div class="row center">
+            <a href="http://materializecss.com/getting-started.html" id="download-button"
+                class="btn-large waves-effect waves-light orange">Get Started</a>
+        </div>
+        <br><br>
 
-        <div id="topbar-responsive" class="topbar-responsive-links">
-            <div class="top-bar-right">
-                <ul class="menu simple vertical medium-horizontal">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Works</a></li>
-                    <li><a href="#">News</a></li>
-                    <li><a href="#">Contact</a></li>
-                    <li>
-                        <button type="button"
-                            class="button hollow topbar-responsive-button">Categories</button>
-                    </li>
-                </ul>
+    </div>
+</div>
+
+
+<div class="container">
+    <div class="section">
+
+        <!--   Icon Section   -->
+        <div class="row">
+            <div class="col s12 m4">
+                <div class="icon-block">
+                    <h2 class="center light-blue-text"><i class="material-icons">flash_on</i></h2>
+                    <h5 class="center">Speeds up development</h5>
+
+                    <p class="light">We did most of the heavy lifting for you to provide a default
+                        stylings that incorporate our custom components. Additionally, we refined
+                        animations and transitions to provide a smoother experience for developers.
+                    </p>
+                </div>
+            </div>
+
+            <div class="col s12 m4">
+                <div class="icon-block">
+                    <h2 class="center light-blue-text"><i class="material-icons">group</i></h2>
+                    <h5 class="center">User Experience Focused</h5>
+
+                    <p class="light">By utilizing elements and principles of Material Design, we
+                        were able to create a framework that incorporates components and animations
+                        that provide more feedback to users. Additionally, a single underlying
+                        responsive system across all platforms allow for a more unified user
+                        experience.</p>
+                </div>
+            </div>
+
+            <div class="col s12 m4">
+                <div class="icon-block">
+                    <h2 class="center light-blue-text"><i class="material-icons">settings</i></h2>
+                    <h5 class="center">Easy to work with</h5>
+
+                    <p class="light">We have provided detailed documentation as well as specific
+                        code examples to help new users get started. We are also always open to
+                        feedback and can answer any questions a user may have about Materialize.</p>
+                </div>
             </div>
         </div>
-    </nav>
+
+    </div>
+    <br><br>
+</div>
 
 
-
-
-    <h1>This is Equal Borders</h1>
-
-    <!-- Compressed JavaScript -->
-    <script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/js/foundation.min.js"
-        integrity="sha256-pRF3zifJRA9jXGv++b06qwtSqX1byFQOLjqa2PTEb2o="
-        crossorigin="anonymous"></script>
-</body>
-
-</html>
+{% endblock %}
