--- a/templates/summaryDashboard/base.html
+++ b/templates/summaryDashboard/base.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
-    <!-- <link href="{% static 'css/base.scss' %}" rel="stylesheet"> -->
+    <link href="{% static 'css/base.css' %}" rel="stylesheet">
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
@@ -16,35 +16,40 @@
 
 <body>
 
-    <nav class="light-blue lighten-1" role="navigation">
+    <nav class="light-blue darken-4" role="navigation">
         <div class="nav-wrapper container">
             <a id="logo-container" href="#" class="brand-logo">Logo of Equal Borders</a>
             <ul class="right hide-on-med-and-down">
-                <li><a href="#">Navbar Link</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Schools</a></li>
+                <li><a href="#">News</a></li>
             </ul>
 
             <ul id="nav-mobile" class="sidenav">
-                <li><a href="#">Navbar Link</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Schools</a></li>
+                <li><a href="#">News</a></li>
             </ul>
             <a href="#" data-target="nav-mobile" class="sidenav-trigger">
-                <i class="material-icons">menu</i></a>
+                <i class="material-icons">Menu</i></a>
         </div>
     </nav>
 
     {% block content %}
     {% endblock%}
 
-    <footer class="page-footer orange">
+    <footer class="page-footer blue-grey darken-3">
         <div class="container">
             <div class="row">
                 <div class="col l6 s12">
-                    <h5 class="white-text">Company Bio</h5>
-                    <p class="grey-text text-lighten-4">We are a team of college students working on
+                    <h5 class="white-text">Equal Borders</h5>
+                    <p class="grey-text text-lighten-4">
+                        We are a team of college students working on
                         this project like it's our full time job. Any amount would help support and
                         continue development on this project and is greatly appreciated.</p>
                 </div>
                 <div class="col l3 s12">
-                    <h5 class="white-text">Settings</h5>
+                    <h5 class="white-text">Info</h5>
                     <ul>
                         <li><a class="white-text" href="#!">Link 1</a></li>
                         <li><a class="white-text" href="#!">Link 2</a></li>
@@ -53,7 +58,7 @@
                     </ul>
                 </div>
                 <div class="col l3 s12">
-                    <h5 class="white-text">Connect</h5>
+                    <h5 class="white-text">Contact Us</h5>
                     <ul>
                         <li><a class="white-text" href="#!">Link 1</a></li>
                         <li><a class="white-text" href="#!">Link 2</a></li>
