--- a/templates/summaryDashboard/summaryDashboard.html
+++ b/templates/summaryDashboard/summaryDashboard.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<div class="section no-pad-bot" id="index-banner">
+<!-- <div class="section no-pad-bot" id="index-banner">
     <div class="container">
         <br><br>
         <h1 class="header center orange-text">Starter Template</h1>
@@ -17,53 +17,74 @@
         <br><br>
 
     </div>
-</div>
+</div> -->
 
-
-<div class="container">
-    <div class="section">
-
-        <!--   Icon Section   -->
-        <div class="row">
-            <div class="col s12 m4">
-                <div class="icon-block">
-                    <h2 class="center light-blue-text"><i class="material-icons">flash_on</i></h2>
-                    <h5 class="center">Speeds up development</h5>
-
-                    <p class="light">We did most of the heavy lifting for you to provide a default
-                        stylings that incorporate our custom components. Additionally, we refined
-                        animations and transitions to provide a smoother experience for developers.
-                    </p>
+<div class="section">
+    <!--   Icon Section   -->
+    <div class="row">
+        <div class="col s12 m3">
+            <div class="card blue-grey darken-1 z-depth-4">
+                <div class="card-content white-text">
+                    <span class="card-title">Schools</span>
+                    <p>I am a very simple card. I am good at containing small bits of information.
+                        I am convenient because I require little markup to use effectively.</p>
                 </div>
-            </div>
-
-            <div class="col s12 m4">
-                <div class="icon-block">
-                    <h2 class="center light-blue-text"><i class="material-icons">group</i></h2>
-                    <h5 class="center">User Experience Focused</h5>
-
-                    <p class="light">By utilizing elements and principles of Material Design, we
-                        were able to create a framework that incorporates components and animations
-                        that provide more feedback to users. Additionally, a single underlying
-                        responsive system across all platforms allow for a more unified user
-                        experience.</p>
-                </div>
-            </div>
-
-            <div class="col s12 m4">
-                <div class="icon-block">
-                    <h2 class="center light-blue-text"><i class="material-icons">settings</i></h2>
-                    <h5 class="center">Easy to work with</h5>
-
-                    <p class="light">We have provided detailed documentation as well as specific
-                        code examples to help new users get started. We are also always open to
-                        feedback and can answer any questions a user may have about Materialize.</p>
+                <div class="card-action">
+                    <a href="#">This is a link</a>
+                    <a href="#">This is a link</a>
                 </div>
             </div>
         </div>
 
+        <div class="col s12 m6">
+            <div class="card blue-grey darken-1 z-depth-4 scroll-card">
+                <div class="card-content white-text">
+                    <span class="card-title">Graph</span>
+                    <p>I am a very simple card. I am good at containing small bits of information.
+                        I am convenient because I require little markup to use effectively.
+                    
+                        I am a very simple card. I am good at containing small bits of information.
+                        I am convenient because I require little markup to use effectively.I am a very simple card. I am good at containing small bits of information.
+                        I am convenient because I require little markup to use effectively.I am a very simple card. I am good at containing small bits of information.
+                        I am convenient because I require little markup to use effectively.I am a very simple card. I am good at containing small bits of information.
+                        I am convenient because I require little markup to use effectively.I am a very simple card. I am good at containing small bits of information.
+                        I am convenient because I require little markup to use effectively.I am a very simple card. I am good at containing small bits of information.
+                        I am convenient because I require little markup to use effectively.I am a very simple card. I am good at containing small bits of information.
+                        I am convenient because I require little markup to use effectively.I am a very simple card. I am good at containing small bits of information.
+                        I am convenient because I require little markup to use effectively.I am a very simple card. I am good at containing small bits of information.
+                        I am convenient because I require little markup to use effectively.I am a very simple card. I am good at containing small bits of information.
+                        I am convenient because I require little markup to use effectively.I am a very simple card. I am good at containing small bits of information.
+                        I am convenient because I require little markup to use effectively.I am a very simple card. I am good at containing small bits of information.
+                        I am convenient because I require little markup to use effectively.I am a very simple card. I am good at containing small bits of information.
+                        I am convenient because I require little markup to use effectively.I am a very simple card. I am good at containing small bits of information.
+                        I am convenient because I require little markup to use effectively.I am a very simple card. I am good at containing small bits of information.
+                        I am convenient because I require little markup to use effectively.I am a very simple card. I am good at containing small bits of information.
+                        I am convenient because I require little markup to use effectively.
+                        this is the end
+                    
+                    </p>
+                </div>
+                <div class="card-action">
+                    <a href="#">This is a link</a>
+                    <a href="#">This is a link</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col s12 m3">
+            <div class="card blue-grey darken-1 z-depth-4">
+                <div class="card-content white-text">
+                    <span class="card-title">News</span>
+                    <p>I am a very simple card. I am good at containing small bits of information.
+                        I am convenient because I require little markup to use effectively.</p>
+                </div>
+                <div class="card-action">
+                    <a href="#">This is a link</a>
+                    <a href="#">This is a link</a>
+                </div>
+            </div>
+        </div>
     </div>
-    <br><br>
 </div>
 
 
