changed to sticky fotter and partial of card height issue. but card height issue is still not completey fixed

--- a/templates/summaryDashboard/base.html
+++ b/templates/summaryDashboard/base.html
@@ -22,7 +22,7 @@
 
 <body>
 
-    <nav class="light-blue darken-4" role="navigation">
+    <nav class="indigo darken-4" role="navigation">
         <div class="nav-wrapper container">
             <a id="logo-container" href="#" class="brand-logo">Logo of Equal Borders</a>
             <ul class="right hide-on-med-and-down">
@@ -41,10 +41,12 @@
         </div>
     </nav>
 
-    {% block content %}
-    {% endblock%}
+    <main class="indigo lighten-5">
+        {% block content %}
+        {% endblock%}
+    </main>
 
-    <footer class="page-footer blue-grey darken-3">
+    <footer class="page-footer  indigo darken-4">
         <div class="container">
             <div class="row">
                 <div class="col l6 s12">
