--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,10 +1,25 @@
+/* card */
 .card {
-    height: 377px; /* Your height here */
-    overflow: hidden;
+  height: 60vh; 
+  overflow: hidden;
+  flex: 1 0 auto;
 }
 
 .scroll-card {
-    overflow-y: scroll;
-    height: 377px;
-    padding: 1rem
+  overflow-y: scroll;
+  height: 100%;
+  padding: 1rem;
 }
+/* End Card*/
+
+/* sticky footer starts */
+body {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
+main {
+  flex: 1 0 auto;
+}
+/* End sticky footer */
