--- a/templates/summaryDashboard/summaryDashboard.html
+++ b/templates/summaryDashboard/summaryDashboard.html
@@ -23,7 +23,7 @@
     <!--   Icon Section   -->
     <div class="row">
         <div class="col s12 m3">
-            <div class="card blue-grey darken-1 z-depth-4">
+            <div class="card blue-grey darken-1 hoverable">
                 <div class="card-content white-text">
                     <span class="card-title">Schools</span>
                     <p>I am a very simple card. I am good at containing small bits of information.
@@ -37,7 +37,7 @@
         </div>
 
         <div class="col s12 m6">
-            <div class="card blue-grey darken-1 z-depth-4 scroll-card">
+            <div class="card blue-grey darken-1 hoverable scroll-card">
                 <div class="card-content white-text">
                     <span class="card-title">Graph</span>
 
@@ -56,11 +56,19 @@
                     <a href="#">This is a link</a>
                     <a href="#">This is a link</a>
                 </div>
+
+                <div class="card-tabs">
+                    <ul class="tabs tabs-fixed-width blue-grey darken-1">
+                        <li class="tab"><a href="#test4">Test 1</a></li>
+                        <li class="tab"><a class="active" href="#test5">Test 2</a></li>
+                        <li class="tab"><a href="#test6">Test 3</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
 
         <div class="col s12 m3">
-            <div class="card blue-grey darken-1 z-depth-4">
+            <div class="card blue-grey darken-1 hoverable">
                 <div class="card-content white-text">
                     <span class="card-title">News</span>
                     <p>I am a very simple card. I am good at containing small bits of information.
