--- a/templates/summaryDashboard/base.html
+++ b/templates/summaryDashboard/base.html
@@ -15,8 +15,7 @@
 
     <script src='https://api.mapbox.com/mapbox-gl-js/v1.11.1/mapbox-gl.js'></script>
     <link href='https://api.mapbox.com/mapbox-gl-js/v1.11.1/mapbox-gl.css' rel='stylesheet' />
-
-
+    <script data-ad-client="ca-pub-4687616113437336" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> 
 
 </head>
 
