--- a/templates/summaryDashboard/summaryDashboard.html
+++ b/templates/summaryDashboard/summaryDashboard.html
@@ -22,21 +22,7 @@
 <div class="section">
     <!--   Icon Section   -->
     <div class="row">
-        <div class="col s12 m3">
-            <div class="card blue-grey darken-1 hoverable">
-                <div class="card-content white-text">
-                    <span class="card-title">Schools</span>
-                    <p>I am a very simple card. I am good at containing small bits of information.
-                        I am convenient because I require little markup to use effectively.</p>
-                </div>
-                <div class="card-action">
-                    <a href="#">This is a link</a>
-                    <a href="#">This is a link</a>
-                </div>
-            </div>
-        </div>
-
-        <div class="col s12 m6">
+        <div class="col s12 m8">
             <div class="card blue-grey darken-1 hoverable scroll-card">
                 <div class="card-content white-text">
                     <span class="card-title">Graph</span>
@@ -67,10 +53,10 @@
             </div>
         </div>
 
-        <div class="col s12 m3">
+        <div class="col s12 m4">
             <div class="card blue-grey darken-1 hoverable">
                 <div class="card-content white-text">
-                    <span class="card-title">News</span>
+                    <span class="card-title">News related to schools</span>
                     <p>I am a very simple card. I am good at containing small bits of information.
                         I am convenient because I require little markup to use effectively.</p>
                 </div>
