--- a/templates/summaryDashboard/summaryDashboard.html
+++ b/templates/summaryDashboard/summaryDashboard.html
@@ -22,6 +22,8 @@
 <div class="section">
     <!--   Icon Section   -->
     <div class="row">
+
+        <!-- Dashboard Card -->
         <div class="col s12 m8">
             <div class="card blue-grey darken-1 hoverable scroll-card">
                 <div class="card-content white-text">
@@ -53,12 +55,17 @@
             </div>
         </div>
 
+        <!-- news card -->
         <div class="col s12 m4">
-            <div class="card blue-grey darken-1 hoverable">
+            <div class="card blue-grey darken-1 hoverable scroll-card">
                 <div class="card-content white-text">
                     <span class="card-title">News related to schools</span>
-                    <p>I am a very simple card. I am good at containing small bits of information.
-                        I am convenient because I require little markup to use effectively.</p>
+                    <ul>
+                        {% for feed in newsFeeds %}
+                            <li>{{ feed.title }}</li>
+                        {% endfor %}
+                    </ul>
+
                 </div>
                 <div class="card-action">
                     <a href="#">This is a link</a>
