--- a/templates/summaryDashboard/summaryDashboard.html
+++ b/templates/summaryDashboard/summaryDashboard.html
@@ -24,16 +24,12 @@
                     </script>
 
                 </div>
-                <div class="card-action">
-                    <a href="#">This is a link</a>
-                    <a href="#">This is a link</a>
-                </div>
 
                 <div class="card-tabs">
                     <ul class="tabs tabs-fixed-width blue-grey darken-1">
-                        <li class="tab"><a href="#test4">Test 1</a></li>
-                        <li class="tab"><a class="active" href="#test5">Test 2</a></li>
-                        <li class="tab"><a href="#test6">Test 3</a></li>
+                        <li class="tab"><a href="#test4">Dashboard 1</a></li>
+                        <li class="tab"><a href="#test5">Dashboard 2</a></li>
+                        <li class="tab"><a href="#test6">Dashboard 3</a></li>
                     </ul>
                 </div>
             </div>
@@ -42,19 +38,22 @@
         <!-- news section -->
         <div class="col s12 m4 container scroll-card">
             <a href={% url 'sumDashNews' %}>
-                <h5 class="blue-grey-text darken-4">News related to schools</h5></a>
+                <h5 class="blue-grey-text darken-4">News related to schools</h5>
+            </a>
             <ul class="collapsible popout" data-collapsible="accordion">
                 {% for feed in newsFeeds %}
-                    <li>
-                        <div class="collapsible-header">
-                            <i class="material-icons">filter_drama</i>{{ feed.title }}
-                        </div>
-                        <div class="collapsible-body truncate"><span>{{ feed.body }}</span></div>
+                <li>
+                    <div class="collapsible-header">
+                        <i class="material-icons">filter_drama</i>{{ feed.title }}</div>
+                    <div class="collapsible-body truncate">
                         <a href={{ feed.link }}>View The Source</a>
-                    </li>
+                        <span>{{ feed.body }}</span>
+                    </div>
+                </li>
                 {% endfor %}
             </ul>
         </div>
+        
     </div>
 </div>
 
