added link searching function

--- a/templates/summaryDashboard/schools.html
+++ b/templates/summaryDashboard/schools.html
@@ -5,7 +5,7 @@
 
     <form class="col s12" action="{% url 'sumDashSchools' %}" method='get'>
         <div class="input-field col s6">
-            <input name='q' type='text' placeholder="Type in School Name or Country Code" class="validate">
+            <input name='q' type='text' placeholder="Type in School Related Terms" class="validate">
         </div>
     </form>
 
