added very simple tableau dashboard

--- a/templates/summaryDashboard/summaryDashboard.html
+++ b/templates/summaryDashboard/summaryDashboard.html
@@ -9,30 +9,48 @@
 
         <!-- Dashboard Card -->
         <div class="col s12 m8">
-            <div class="card blue-grey darken-1 hoverable scroll-card">
+
+            <!-- added tableau -->
+            <div class='tableauPlaceholder' id='viz1598159823370'
+            style='position: relative'><noscript><a href='#'><img alt=' '
+                        src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Bo&#47;Book2_15977367557900&#47;Sheet7&#47;1_rss.png'
+                        style='border: none' /></a></noscript><object class='tableauViz'
+                style='display:none;'>
+                <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+                <param name='embed_code_version' value='3' />
+                <param name='site_root' value='' />
+                <param name='name' value='Book2_15977367557900&#47;Sheet7' />
+                <param name='tabs' value='no' />
+                <param name='toolbar' value='yes' />
+                <param name='static_image'
+                    value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Bo&#47;Book2_15977367557900&#47;Sheet7&#47;1.png' />
+                <param name='animate_transition' value='yes' />
+                <param name='display_static_image' value='yes' />
+                <param name='display_spinner' value='yes' />
+                <param name='display_overlay' value='yes' />
+                <param name='display_count' value='yes' />
+                <param name='language' value='en' /></object>
+            </div>
+        
+            <script type='text/javascript'>                    
+                var divElement = document.getElementById('viz1598159823370'); 
+                var vizElement = divElement.getElementsByTagName('object')[0]; 
+                vizElement.style.width = '100%'; 
+                vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px'; var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                
+            </script>
+            <!-- <div class="card blue-grey darken-1 hoverable scroll-card">
                 <div class="card-content white-text">
-                    <span class="card-title">Graph</span>
+                    <span class="card-title">Dashboard</span>
+                </div> -->
 
-                    <!-- added mapbox -->
-                    <div id='map' style='width: 600px; height: 200px;'></div>
-                    <script>
-                        mapboxgl.accessToken = 'pk.eyJ1IjoiZ3JpZmZjaG8iLCJhIjoiY2sxMzY1a3U3MDVxczNkcWp4eDJ4N2lyMyJ9.DtH7gHndwTLBuxXNnMpSig';
-                        var map = new mapboxgl.Map({
-                            container: 'map',
-                            style: 'mapbox://styles/mapbox/streets-v11'
-                        });
-                    </script>
-
-                </div>
-
-                <div class="card-tabs">
+                <!-- <div class="card-tabs">
                     <ul class="tabs tabs-fixed-width blue-grey darken-1">
                         <li class="tab"><a href="#test4">Dashboard 1</a></li>
                         <li class="tab"><a href="#test5">Dashboard 2</a></li>
                         <li class="tab"><a href="#test6">Dashboard 3</a></li>
                     </ul>
-                </div>
-            </div>
+                </div> -->
+            <!-- </div> -->
         </div>
 
         <!-- news section -->
@@ -53,7 +71,7 @@
                 {% endfor %}
             </ul>
         </div>
-        
+
     </div>
 </div>
 
